# relative-pose-estimation

./: .dockerignore  .gitignore  BUILD.md  CLAUDE.md  CMakeLists.txt  Camera-Intrinsics.md  Dockerfile  Makefile  MatchResult.md  PREPROCESSING_SUMMARY.md  README.md  USAGE.md  main.py  requirements.txt  responsibilities.md
.claude/: hookify.prevent-verbose-responses.local.md
.claude/agents/: context-manager.md  prompt-engineer.md
.claude/context/plans/: code-fixes.md
alpha-version-results/: results.txt
evaluation-runs/phone-data/camera_calibration_code/: calibration_filtered.npz
evaluation-runs/phone-data/results/: evaluation_results.csv
evaluation-runs/simulator-data/results/: evaluation_results.csv
evaluation-runs/vo_dataset_salah/: README.txt
evaluation-runs/vo_dataset_salah/data/: calibration.npz  camera_poses_zyx.txt
evaluation-runs/vo_dataset_salah/data/calibration/: distCoeff.npy  image_size.npy  intrinsic_matrix.npy
evaluation-runs/vo_dataset_salah/markers/: marker_positions.txt
evaluation-runs/vo_dataset_salah/results/: evaluation_results.csv
old-attempts/27.12.25/: report.md
old-attempts/6.12.25/: report.md
orr-src/: feature_extractor.py  matcher.py  pose_matcher_full.py  qr_pose_frames.py  video_to_frames.py
phone-data/: calibration_scaled.npz  camera_poses.txt  camera_poses_yup.txt
phone_camera/: qr_pose_frames.py  video_to_frames.py
phone_camera/camera_calibration_code/: calibrate.py
phone_camera/forward_with_stuff/: forward_with_stuff.csv  tag0_pose_all.csv  tag0_pose_filtered.csv
phone_camera/from_right_to_left/: tag0_pose_all.csv  tag0_pose_filtered.csv
python-app/: step1_detect_keypoints.py
results/: evaluation_results.csv
silmulator_data/: camera_poses.csv
simulator-data/: camera_poses.txt
src/: __init__.py  align_and_view_gt_est.py  compare_pose_with_gt.py  dataset_loader.py  feature_extractor.py  gt_utils.py  image_loader.py  loftr_eval_sequence.py  loftr_matching_demo.py  loftr_pose_with_gt.py  main.c  main.cpp  match-result.h  multi_eval.py  pipeline.py  plot_from_yaw_pitch_roll.py  plots_graths.py  pose_from_two_images.py  pose_from_two_images_undist.py  pose_matcher.py  pose_matcher_full.py  pose_orb_lsd_calibrated.py  run_phone_data.py  run_simulator_data.py  run_single_pair.py  run_vo_database_salah.py  step1_detect_keypoints.py  toy_3d_vectors.py  view_gt_numbers.py  view_gt_vs_estimated.py
src/core/: __init__.py  batch_processor.py  camera_calibration.py  ground_truth_loader.py  pose_estimator.py  pose_evaluator.py  visualizer.py
src/scripts/: __init__.py  plot_trajectory.py  plot_vectors.py
src/utils/: __init__.py  geometry.py  geometry_zyx.py  image_loader.py
tests/: README.md  __init__.py  run_evaluation.py  run_single_pair.py  run_video.py
